--- a/src/Components/Layout/Header.css
+++ b/src/Components/Layout/Header.css
@@ -1,5 +1,6 @@
 .header-top {
-    position: fixed;
+    position: sticky;
+    z-index: 1;
     top: 0px;
     width: 100%;
     background-color: brown;
