--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,11 +1,15 @@
 .card {
     display: flex;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     justify-content: center;
     flex-direction: column;
-    border: 2px solid  blueviolet;
+    border: 2px solid  rgb(76, 126, 126);
+    background-color: rgb(212, 237, 229);
     margin-top: 1rem;
     user-select: none;
     cursor: pointer;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .card:hover{
@@ -31,5 +35,5 @@
     display: flex;
     margin: 8px;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
 }
