--- a/src/Components/Layout/Header.css
+++ b/src/Components/Layout/Header.css
@@ -3,7 +3,7 @@
     z-index: 1;
     top: 0px;
     width: 100%;
-    background-color: brown;
+    background-color: rgba(9, 132, 107, 0.975);
     height: 3rem;
 }
 
