--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -1,16 +1,18 @@
 .detail-card {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border: 2px solid  blueviolet;
+    border: 2px solid  rgb(76, 126, 126);
     margin-top: 1rem;
     user-select: none;
     cursor: pointer;
-
+    border-radius: 10px;
+    background-color: rgb(212, 237, 229);
 }
 
 .detail-image-container{
-    height: 35rem;
+    height: 30rem;
     width: 40rem;
     overflow: hidden;
 }
@@ -29,4 +31,12 @@
     margin: 8px;
     align-items: center;
     justify-content: left;
+}
+
+.detail-title {
+    display: flex;
+    margin: 8px;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder;
 }
