--- a/src/Components/CardList/CardList.module.css
+++ b/src/Components/CardList/CardList.module.css
@@ -1,19 +1,29 @@
-.detail-card {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.sidebar {
+    margin-left: 2rem;
+    width: 500px
+}
+
+.card {
     display: flex;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     justify-content: center;
     flex-direction: column;
     border: 2px solid  rgb(76, 126, 126);
+    background-color: rgb(212, 237, 229);
     margin-top: 1rem;
     user-select: none;
     cursor: pointer;
-    border-radius: 10px;
-    background-color: rgb(212, 237, 229);
+    border-radius: 5px;
+    overflow: hidden;
 }
 
-.detail-image-container{
-    height: 30rem;
-    width: 40rem;
+.card:hover{
+    border: 2px dotted  rgb(136, 119, 151);
+}
+
+.image_container{
+    height: 500px;
+    width: 100%;
     overflow: hidden;
 }
 
@@ -26,17 +36,9 @@
     filter: brightness(100%);
 }
 
-.detail-details {
-    display: flex;
-    margin: 8px;
-    align-items: center;
-    justify-content: left;
-}
-
-.detail-title {
+.details {
     display: flex;
     margin: 8px;
     align-items: center;
     justify-content: center;
-    font-weight: bolder;
 }
