header color changed

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -20,7 +20,7 @@
     z-index: 1;
     top: 0px;
     width: 100%;
-    background-color: red;
+    background-color: rgb(117, 85, 85);
     height: 3rem;
 }
 
